updated max-width for small screen to 575 px for fix layout breakpoints problem

--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -70,7 +70,7 @@
     margin: auto;
     width: 90%;
 
-    @media (max-width: 576px) {
+    @media (max-width: 575px) {
       max-width: 300px;
     }
 
