--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -84,7 +84,7 @@
   font-size: 0.8rem;
   font-weight: 400;
 
-  @media (max-width: 576px) {
+  @media (max-width: 575px) {
     display: none;
   }
 }
@@ -104,7 +104,7 @@
 }
 
 .googleButtonText {
-  @media (max-width: 576px) {
+  @media (max-width: 575px) {
     display: none;
   }
 }
